k8s/nginx-ingress/techtalks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techtalksingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /producer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-producer-service
            port:
              number: 8080
